# cuenca-flow-optimizer

./: .gitignore  CITATION.cff  LICENSE  README.md  django_tree.py  pyproject.toml  requirements.txt
data/: emissions_CO2.csv  experiment_metrics.csv  n_experiment_metrics.csv
plotters/: barras.py  ieee_style.py  plot_emissions_bar.py  plot_emissions_over_time.py  plot_phase_distribution.py  plot_throughput_over_time.py  plot_waiting_time_bar.py  plot_waiting_time_over_time.py  plotter_phases.py  plotter_queue_len.py  plotter_waitingtime.py  veh_density.py
scripts/: sweep_experiments.py  sweep_experiments_1.py  sweep_experiments_2.py  sweep_experiments_3.py  sweep_experiments_4.py  sweep_experiments_first.py  sweep_experiments_fourth.py  sweep_experiments_second.py  sweep_experiments_third.py  sweep_experiments_very_high.py
sumo_files/: _temp_01cdf6_osm_gap_actuated.sumocfg  _temp_1e61e9_osm_gap_actuated.sumocfg  _temp_27cfc4_osm_gap_actuated.sumocfg  _temp_4605f3_osm_gap_actuated.sumocfg  _temp_4a6fab_osm_static.sumocfg  _temp_56cfb7_osm_gap_actuated.sumocfg  _temp_5b912d_osm_actuated.sumocfg  _temp_6284e6_osm_gap_actuated.sumocfg  _temp_825153_osm_static.sumocfg  _temp_9001fb_osm_gap_actuated.sumocfg  _temp_ba3683_osm_gap_actuated.sumocfg  _temp_c65406_osm_gap_actuated.sumocfg  _temp_e3b38f_osm_gap_actuated.sumocfg  _temp_f927e8_osm_fuzzy.sumocfg  build.bat  edgeData.xml  flows.rou.xml  generated_routes_high.rou.xml  generated_routes_hourly.rou.xml  generated_routes_low.rou.xml  generated_routes_medium.rou.xml  generated_routes_medium_extended.rou.xml  osm.netccfg  (+15 more)
(+137 files in other folders)
