[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fuzzylts"
version = "0.1.0"
description = "Gap–Fuzzy Adaptive Signal Control for SUMO/TRaCI"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["fuzzylts*"]